<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    <string name="follow_election">Follow</string>
    <string name="unfollow_election">UnFollow</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="election_information">Election Information</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="corresponding_address">Corresponding Address</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="my_representatives">My Representatives</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="location_required_error">Location services must be enabled to use this feature</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="location_error">Error resolving location.</string>
    <string name="settings">Settings</string>
    <string name="complete_fields">Please ensure all required fields are completed</string>
    <string name="valid_address">Please select a location in the US</string>
    <string name="representative_image">Representative Image</string>
    <string name="navigate_to_website">Navigate to Website</string>
    <string name="navigate_to_facebook">Navigate to Facebook</string>
    <string name="navigate_to_twitter">Navigate to Twitter</string>
    <string name="ballot_image">Ballot Image</string>


</resources>
