<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="76dp">

        <ImageView
            android:id="@+id/representative_image"
            style="@style/representative_image"
            android:contentDescription="@string/representative_image"
            app:profileImage="@{representative.official.photoUrl}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/office_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@{representative.office.name}"
            app:layout_constraintLeft_toRightOf="@id/representative_image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginStart="@dimen/default_padding" />

        <TextView
            android:id="@+id/official_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@{representative.official.name}"
            android:layout_marginStart="@dimen/default_padding"
            app:layout_constraintLeft_toRightOf="@id/representative_image"
            app:layout_constraintTop_toBottomOf="@id/office_name" />

        <TextView
            android:id="@+id/official_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{representative.official.party}"
            app:layout_constraintLeft_toRightOf="@id/representative_image"
            app:layout_constraintTop_toBottomOf="@id/official_name"
            android:layout_marginStart="@dimen/default_padding" />


        <ImageView
            android:id="@+id/www_icon"
            style="@style/social_images"
            android:contentDescription="@string/navigate_to_website"
            app:srcCompat="@drawable/ic_www"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/facebook_icon" />

        <ImageView
            android:id="@+id/facebook_icon"
            style="@style/social_images"
            android:contentDescription="@string/navigate_to_facebook"
            app:srcCompat="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/twitter_icon" />

        <ImageView
            android:id="@+id/twitter_icon"
            style="@style/social_images"
            android:contentDescription="@string/navigate_to_twitter"
            app:srcCompat="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>